Added disband, leave and join commands and caching

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -22,6 +22,9 @@ permissions:
   clandestinos.*:
     description: Allows every Clandestinos command.
     children:
-      clandestinos.create: true
       clandestinos.reload: false
+      clandestinos.create: true
       clandestinos.invite: true
+      clandestinos.leave: true
+      clandestinos.join: true
+      clandestinos.disband: true
