Finish kick subcommand

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -28,3 +28,4 @@ permissions:
       clandestinos.leave: true
       clandestinos.join: true
       clandestinos.disband: true
+      clandestinos.kick: true
