Added missing subcommands to plugin.yml

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -40,3 +40,6 @@ permissions:
       clandestinos.clanchat: true
       clandestinos.spy: false
       clandestinos.enemy: true
+      clandestinos.unenemy: true
+      clandestinos.makeleader: true
+      clandestinos.makemember: true
