--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -28,18 +28,37 @@ permissions:
   clandestinos.*:
     description: Allows every Clandestinos command.
     children:
-      clandestinos.reload: false
-      clandestinos.create: true
-      clandestinos.invite: true
-      clandestinos.uninvite: true
-      clandestinos.leave: true
-      clandestinos.join: true
-      clandestinos.disband: true
-      clandestinos.kick: true
-      clandestinos.modtag: true
-      clandestinos.clanchat: true
-      clandestinos.spy: false
-      clandestinos.enemy: true
-      clandestinos.unenemy: true
-      clandestinos.makeleader: true
-      clandestinos.makemember: true
+      clandestinos.reload:
+        default: op
+      clandestinos.create:
+        default: true
+      clandestinos.invite:
+        default: true
+      clandestinos.uninvite:
+        default: true
+      clandestinos.leave:
+        default: true
+      clandestinos.join:
+        default: true
+      clandestinos.disband:
+        default: true
+      clandestinos.kick:
+        default: true
+      clandestinos.modtag:
+        default: true
+      clandestinos.clanchat:
+        default: true
+      clandestinos.spy:
+        default: op
+      clandestinos.enemy:
+        default: true
+      clandestinos.unenemy:
+        default: true
+      clandestinos.makeleader:
+        default: true
+      clandestinos.makemember:
+        default: true
+      clandestinos.debug:
+        default: op
+      clandestinos.list:
+        default: true
